# app.js
@@ -1,20 +1,38 @@
+require('dotenv').config();
+
 const express = require('express');
 const cors = require('cors');
+const session = require('express-session');
+const passport = require('./config/passport');
 const mongodb = require('./db/connect');
 const contactsRoutes = require('./routes/contacts');
- 
+const employeesRoutes = require('./routes/employees');
+const authRoutes = require('./routes/auth');
+
 const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');  
+const swaggerDocument = require('./swagger.json');
 
 const app = express();
-const port = process.env.PORT || 8080; 
+const port = process.env.PORT || 8080;
 
 app.use(cors());
 app.use(express.json());
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument)); // Ruta para la documentación de Swagger
+app.use(
+  session({
+    secret: process.env.SESSION_SECRET,
+    resave: false,
+    saveUninitialized: false,
+  })
+);
+app.use(passport.initialize());
+app.use(passport.session());
 
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+app.use('/auth', authRoutes);
 app.use('/contacts', contactsRoutes);
+app.use('/employees', employeesRoutes);
 
 mongodb.initDb((err) => {
   if (err) {
